FakeDeque added for improving unit tests.

--- a/Deque_2_1/Deque_2_1.csproj
+++ b/Deque_2_1/Deque_2_1.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Deque.cs" />
+    <Compile Include="FakeDeque.cs" />
     <Compile Include="InvertedView.cs" />
     <Compile Include="NormalView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
